--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -5,8 +5,6 @@
   }
   
   .footer-container {
-    max-width: 1200px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
   }
