--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -2,7 +2,9 @@
 .homepage {
     background-image: url(../../assets/imgs/homepage-background.jpg);
     background-size: cover;
-    padding-bottom: .5rem;
+    margin: 0;
+    padding: 0;
+    padding-bottom: .85rem;
   }
 
   .homepage-text {
@@ -205,7 +207,6 @@
   .robins-favorites-container {
     display: flex;
     justify-content: space-around;
-    margin: 1rem 0;
   }
 
   .robin-favorite-item {
